# HydrosatTechnicalAssessment

./: .env  Dockerfile  README.md  bounding_box.geojson  dagster.yaml  deplo_new_dagster.sh  deploy_dagster.sh  fields.geojson  generate_sample_data.py  pyproject.toml  requirements.txt  setup.sh  setup_k3d_cluster.sh  simple_deploy_dagster.sh  user-deploy.yaml  workspace.yaml
dagster_ndvi_project/: Dockerfile  README.md  __init__.py  debug_assets.py  definitions.py  pyproject.toml  setup.py  workspace.yaml
dagster_ndvi_project/dagster_ndvi_project/: __init__.py  assets.py  definitions.py  resources.py  sensors.py
dagster_ndvi_project/dagster_ndvi_project/sensors/: optimized_ndvi_sensor.py
input_data/: bounding_box.geojson  fields.geojson
k8s/: patch-dagit.yaml  patch-dagster-daemon.yaml  patch-dagster-user-deploy.yaml
k8s/deployment/: daemon-deploy-full.yaml  daemon-deploy.yaml  dagit-deploy-full.yaml  dagit-deploy.yaml  dagster-instance-config.yaml  dagster-job-env.yaml  dagster-job-secrets.yaml  dagster-yaml-config.yaml  patch-dagit.yaml  patch-dagster-daemon.yaml  patch-dagster-user-deploy.yaml  user-deploy-full.yaml
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
