[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster_ndvi_project"
version = "0.0.1"
description = "Dagster NDVI processing example for Hydrosat"
authors = [
    { name = "Hydrosat Team", email = "info@hydrosat.com" },
]
requires-python = ">=3.8"
dependencies = [
    # Dagster dependencies
    "dagster==1.10.11",
    "dagster-k8s==0.26.11",
    "dagster-aws==0.26.11",
    "dagster-webserver==1.10.11",
    
    # For S3/MinIO interaction - specific versions that work together
    "botocore==1.29.161",
    "boto3==1.26.161",
    "aiobotocore==2.5.2",
    "s3fs==2023.6.0",
    "fsspec==2023.6.0",
    
    # Geospatial data processing
    "pystac-client==0.7.5",
    "planetary-computer==1.0.0", 
    "rasterio==1.3.8",
    "geopandas==0.13.2",
    "shapely==2.0.2",
    "pyproj==3.6.1",
    "xarray==2023.1.0",
    "rioxarray==0.14.1",
    
    # Data handling and analysis
    "numpy==1.24.4",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "matplotlib==3.7.3",
    
    # Utility
    "tqdm==4.66.1",
    "python-dateutil==2.8.2",
]

[project.entry-points."dagster.code_location"]
dagster_ndvi_project = "dagster_ndvi_project.definitions:definitions"

[tool.setuptools]
packages = ["dagster_ndvi_project"] 